# C_code

./: README.md
工创/: .gitignore  KillAEB.bat  KillAVP.bat  KillAutoPilot.bat  KillLKA.bat  KillManual.bat  README.md  StartAEB.bat  StartAVP.bat  StartAutoPilot.bat  StartLKA.bat  StartManual.bat  main - aeb.bat  main - avp.bat  main - lka.bat  main.bat
工创/ADAS/: .gitignore
工创/ADAS/Manual/: CMakeLists.txt
工创/ADAS/Manual/src/: ManualSample.cpp
工创/Autopilot/: .gitignore  (+1 more)
工创/Autopilot/CurveSample/: CMakeLists.txt
工创/Autopilot/CurveSample/src/: CurveSample.cpp
工创/Autopilot/TrafficLightSample/: CMakeLists.txt
工创/Autopilot/TrafficLightSample/src/: TrafficLightSample.cpp
工创/Cyber/: .gitignore  CMakeLists.txt  readme.md
工创/Cyber/include/: BuildVersion.hpp  DataElement.hpp  DataFrame.hpp  Message.hpp  trans_node_cyber.hpp
工创/Cyber/include/glm/: box3.hpp  dbox3.hpp  dmat4.hpp  dquat.hpp  dvec2.hpp  ivec2.hpp  ivec3.hpp  ivec4.hpp  quat.hpp
工创/Cyber/include/msg_gen/: EBrakeMode.h  EGearMode.h  ESimOneData_BoundaryColor.h  ESimOneData_LineCurveParameter.h  ESteeringMode.h  EThrottleMode.h  SimOneData_Vec3f.h  SimOneSensorConfiguration.h  SimOne_Data_LaneLineInfo.h  SimOne_Data_Obstacle_Entry.h  SimOne_Data_Position_Info_Array.h  SimOne_Data_SensorDetections_Entry.h  SimOne_Data_TrafficLight.h  SimOne_Data_Traffic_Info.h  SimOne_Driver_Status.h  caseinfo.h  control.h  control_trajectory.h  esp_control.h  mainvehicle_status.h  pose_control.h  prediction.h  trafficlights.h  trajectory.h  ultrasonicradars.h  vehicle_extra.h
工创/Cyber/include/tasks/: TaskCyberChassisImu.hpp  TaskCyberChassisImu_Gps.hpp  TaskCyberContiRadar.hpp  TaskCyberControl.hpp  TaskCyberGps.hpp  TaskCyberImage.hpp  TaskCyberObstacles.hpp  TaskCyberPointCloud.hpp  TaskCyberPoseControl.hpp  TaskCyberRoutingReq.hpp  TaskCyberTrafficLight.hpp  TaskCyberTrajectory.hpp
工创/Cyber/source/: autopilot.py  config.ini  kill.sh  run.sh
工创/Cyber/src/: Config.cpp  SensorLidar.cpp  trans_node_cyber.cpp
工创/Cyber/src/coord_conver/: ECEF.cpp  tsf.cpp
工创/Cyber/src/glm/: box3.cpp  dbox3.cpp  dmat3.cpp  dmat4.cpp  dquat.cpp  dvec2.cpp  dvec3.cpp  dvec4.cpp  mat3.cpp  mat4.cpp  quat.cpp  vec2.cpp  vec3.cpp  vec4.cpp
工创/Cyber/src/task/: TaskCyberChassisImu.cpp  TaskCyberChassisImu_Gps.cpp  TaskCyberContiRadar.cpp  TaskCyberControl.cpp  TaskCyberGps.cpp  TaskCyberImage.cpp  TaskCyberObstacles.cpp  TaskCyberPointCloud.cpp  TaskCyberRoutingReq.cpp  TaskCyberTrafficLight.cpp  TaskCyberTrajectory.cpp
工创/Fast-DDS/: CMakeLists.txt  README.txt  gen_make.sh
工创/Fast-DDS/idl/: SimOne_Data.cxx  SimOne_Data.h  SimOne_Data.idl  SimOne_DataPubSubTypes.cxx  SimOne_DataPubSubTypes.h  SimOne_Data_Control.cxx  SimOne_Data_Control.h  SimOne_Data_Control.idl  SimOne_Data_ControlPubSubTypes.cxx  SimOne_Data_ControlPubSubTypes.h  SimOne_Data_Gps.cxx  SimOne_Data_Gps.h  SimOne_Data_Gps.idl  SimOne_Data_GpsPubSubTypes.cxx  SimOne_Data_GpsPubSubTypes.h  SimOne_Data_Obstacle.cxx  SimOne_Data_Obstacle.h  SimOne_Data_Obstacle.idl  SimOne_Data_ObstaclePubSubTypes.cxx  SimOne_Data_ObstaclePubSubTypes.h
工创/Fast-DDS/include/: Pub.h  Sub.h  Trans.h
工创/Fast-DDS/include/common/: verify_ip.hpp
工创/Fast-DDS/run/: config.ini
工创/Fast-DDS/src/: Pub.cpp  Sub.cpp  Trans.cpp  main.cpp
工创/Fast-DDS/src/common/: Config.cpp  veryfy_ip.cpp
工创/ROS/: CMakeLists.txt
工创/ROS/include/: DefinesCore.hpp  EnvironmentVariable.hpp  ProductVersion.hpp  trans_node_ros.hpp
工创/ROS/include/glm/: bvec2.hpp  bvec3.hpp  bvec4.hpp  dmat3.hpp  dvec3.hpp  dvec4.hpp  function.hpp  mat3.hpp  mat4.hpp  vec2.hpp  vec3.hpp  vec4.hpp
工创/ROS/include/msg_gen/: ESimOneData_BoundaryType.h  ESimOneLaneType.h  ESimone_Vehicle_EventInfo_Type.h  SimOne_Data_Position_Info.h  SimOne_Data_RadarDetection_Entry.h  SimOne_Data_Trajectory_Entry.h  SimOne_Data_UltrasonicRadar.h  SimOne_Data_UltrasonicRadarDetection_Entry.h  SimOne_Obstacle_Type.h  SimOne_TrafficLight_Status.h  driver_status.h  environment.h  gps.h  laneinfo.h  mainvehicle.h  mainvehicle_info.h  obstacle.h  radardetection.h  sensorconfigurations.h  sensordetections.h  signal_lights.h  trajectory_point.h  vehicle_eventinfo.h  waypoints.h  waypoints_entry.h
工创/ROS/include/public/: MHDMap.h
工创/ROS/src/: Config.cpp  connectSimOne.sh  mgrs_converter.cpp  obj_pcd_gen.cpp  readme.md  trans_node_ros.cpp
工创/ROS/src/coord_conver/: GeographicFrameBase.cpp  dvec3.cpp
工创/SensorRaw/SensorCamera/: CMakeLists.txt  build_release.bat  build_release.sh  gen_vs_proj.bat  run_sensor_camera_view.bat  run_sensor_camera_view.sh
工创/SensorRaw/SensorCamera/src/: SensorCamera.cpp
工创/SensorRaw/SensorLidar/: CMakeLists.txt  build_release.bat  gen_vs_proj.bat  run_sensor_lidar_view.bat  run_sensor_lidar_view.sh
工创/SensorRaw/SensorLidar/src/: SensorLidar.cpp
工创/SensorRaw/SensorLidarROS/: CMakeLists.txt  SimOneStreamingAPI.h  build_release.sh  run_sensor_lidar.sh
工创/SensorRaw/SensorLidarROS/src/: SensorLidarROS.cpp
工创/Tutorial/Dynamics/: CMakeLists.txt  DynamicsLog.hpp  PostProcessing.m  TestSample.hpp  UtilMath.hpp  main.cpp
工创/Tutorial/HDMap/: CMakeLists.txt
工创/Tutorial/HDMap/include/: SampleGetCrosswalkList.h  SampleGetDistanceToLaneBoundary.h  SampleGetHeights.h  SampleGetJunctionList.h  SampleGetLaneData.h  SampleGetLaneLength.h  SampleGetLaneST.h  SampleGetLaneSample.h  SampleGetLaneSampleByLocation.h  SampleGetLaneWidth.h  SampleGetNearMostLane.h  SampleGetRoadLength.h  SampleGetRoadST.h  SampleGetSectionLaneList.h  SampleIsDriving.h  SampleIsInJunction.h  SampleIsInsideLane.h  SampleIsTwoSideRoad.h  SampleNavigate.h
工创/Tutorial/HDMap/src/: HDMapSample.cpp  HDMapSample.py
工创/Tutorial/PNC/: CMakeLists.txt
工创/Tutorial/PNC/include/: PNC_Sample.h  timer.hpp
工创/Tutorial/PNC/src/: PNC_Sample.cpp
工创/Tutorial/Traffic/: CMakeLists.txt
工创/Tutorial/Traffic/Python/: TrafficFlow.py  bikeWayPoints.json  highpoint.json  pedestrianWayPoints.json  vehicleWayPoints.json
工创/Tutorial/Traffic/src/: Utils.cpp  Utils.h  main.cpp  main.h  pch.h
工创/Tutorial/V2X/V2XADAS/: CMakeLists.txt
工创/Tutorial/V2X/V2XADAS/src/: V2XSample.cpp
(+71 files in other folders)
